# rust_road_router

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENCE.txt  README.md  cch_complete.sh  flow_cutter_cch_cut_order.sh  flow_cutter_cch_cut_reorder.sh  flow_cutter_cch_order.sh  flow_cutter_console  index.html  style.css
.cargo/: config
analysis/: Basic vs Perfect Customization.ipynb  Customization Approx.ipynb  Customization Scaling.ipynb  compare_queries.py  describe_query_stats.py
catchup/: Cargo.toml
cchpp/: Cargo.toml
chpot/: Cargo.toml
conversion/: Cargo.toml
conversion/src/: lib.rs
conversion/src/here/: csv_source.rs  link_id_mapper.rs  mod.rs
docs/: .gitignore
engine/: .gitignore  Cargo.toml  README.md  build.rs
engine/.cargo/: config
engine/benches/: mod_benchmark.rs
engine/debug/: debug.html  events.js
engine/debug/js/: leaflet-color-markers.js
engine/src/: as_mut_slice.rs  as_slice.rs  cli.rs  datastr.rs  experiments.rs  export.rs  in_range_option.rs  index_heap.rs  inrange_option.rs  io.rs  lib.rs  main.rs  math.rs  rank_select_map.rs  report.rs  sorted_search_slice_ext.rs  util.rs
engine/src/algo/: a_star.rs  alt.rs  catchup.rs  ch_potentials.rs  dijkstra.rs  hl.rs  metric_merging.rs  minimal_nonshortest_subpaths.rs  mod.rs  rphast.rs  stepped_elimination_tree.rs  td_astar.rs  time_dependent_sampling.rs  topocore.rs  traffic_aware.rs
engine/src/algo/catchup/: floating_td_stepped_elimination_tree.rs  light.rs  partial_profiles.rs  profiles.rs  profiles_naive.rs  td_stepped_elimination_tree.rs
engine/src/algo/ch_potentials/: penalty.rs  query.rs  td_astar.rs  td_query.rs
engine/src/algo/contraction_hierarchy/: mod.rs  query.rs
engine/src/algo/customizable_contraction_hierarchy/: contraction.rs  customization.rs  mod.rs  query.rs  reorder.rs  separator_decomposition.rs
engine/src/algo/customizable_contraction_hierarchy/customization/: catchup_light.rs  directed.rs  ftd.rs  ftd_for_pot.rs  parallelization.rs  validity.rs
engine/src/algo/customizable_contraction_hierarchy/query/: nearest_neighbor.rs  stepped_elimination_tree.rs
engine/src/algo/dijkstra/: floating_td_stepped_dijkstra.rs  gen_topo_dijkstra.rs  generic_dijkstra.rs  multicrit_dijkstra.rs  stepped_dijkstra.rs  td_stepped_dijkstra.rs  td_topo_dijkstra.rs  topo_dijkstra.rs
engine/src/algo/dijkstra/query/: bidirectional_dijkstra.rs  dijkstra.rs  floating_td_dijkstra.rs  mod.rs  nearest_neighbor.rs  sym_bidir_astar.rs  td_dijkstra.rs
engine/src/algo/query/: contraction_hierarchy.rs  customizable_contraction_hierarchy.rs  floating_td_customizable_contraction_hierarchy.rs  floating_td_dijkstra.rs  td_astar.rs  td_dijkstra.rs  time_dependent_sampling.rs  topocore.rs
engine/src/algo/traffic_aware/: td_live.rs  td_traffic_pots.rs  time_dependent.rs
engine/src/benchmark/: mod.rs
engine/src/datastr/: clearlist_vector.rs  graph.rs  heap.rs  index_heap.rs  node_order.rs  rank_select_map.rs  timestamped_vector.rs
engine/src/datastr/graph/: first_out_graph.rs  link_id_to_tail_mapper.rs  mod.rs
engine/src/datastr/graph/floating_time_dependent/: graph.rs  live_shortcut.rs  mod.rs  partial_shortcut.rs  piecewise_linear_function.rs  shortcut.rs  shortcut_graph.rs  shortcut_source.rs  travel_time_function.rs
engine/src/datastr/graph/floating_time_dependent/geometry/: imai_iri.rs  mod.rs  point.rs
engine/src/datastr/graph/floating_time_dependent/piecewise_linear_function/: cursor.rs
engine/src/datastr/graph/time_dependent/: graph.rs  math.rs  mod.rs  piecewise_linear_function.rs  sorted_search_slice_ext.rs  wrapping_range.rs
engine/src/datastr/graph/time_dependent/geometry/: mod.rs  segment.rs
engine/src/experiments/: a_star.rs  catchup.rs  chpot.rs
engine/src/graph/: first_out_graph.rs  link_id_to_tail_mapper.rs  mod.rs  piecewise_linear_function.rs
engine/src/graph/floating_time_dependent/: graph.rs  mod.rs  piecewise_linear_function.rs  shortcut.rs  shortcut_graph.rs  shortcut_source.rs
engine/src/graph/floating_time_dependent/geometry/: imai_iri.rs  mod.rs  point.rs
engine/src/graph/floating_time_dependent/piecewise_linear_function/: cursor.rs
engine/src/graph/time_dependent/: graph.rs  intersections.rs  linked.rs  merge.rs  mod.rs  piecewise_linear_function.rs  shortcut.rs  shortcut_graph.rs  shortcut_source.rs  sorted_search_slice_ext.rs  wrapping_range.rs  wrapping_slice_iter.rs
engine/src/graph/time_dependent/geometry/: line.rs  mod.rs  point.rs  segment.rs
engine/src/import/: mod.rs
engine/src/import/here/: csv_source.rs  link_id_mapper.rs  mod.rs
engine/src/io/: mod.rs
engine/src/link_speed_estimates/: event_iterator.rs  link_speed_estimator.rs  mod.rs
engine/src/report/: benchmark.rs
engine/src/shortest_path/: clearlist_vector.rs  floating_td_stepped_dijkstra.rs  floating_td_stepped_elimination_tree.rs  mod.rs  multicrit_dijkstra.rs  node_order.rs  stepped_dijkstra.rs  stepped_elimination_tree.rs  td_stepped_dijkstra.rs  td_stepped_elimination_tree.rs  timestamped_vector.rs  topocore.rs
engine/src/shortest_path/contraction_hierarchy/: ch_graph.rs  mod.rs
engine/src/shortest_path/customizable_contraction_hierarchy/: cch_graph.rs  ch_graph.rs  contraction.rs  customization.rs  mod.rs  reorder.rs  separator_decomposition.rs
engine/src/shortest_path/customizable_contraction_hierarchy/customization/: ftd.rs  parallelization.rs
engine/src/shortest_path/query/: bidirectional_dijkstra.rs  contraction_hierarchy.rs  customizable_contraction_hierarchy.rs  dijkstra.rs  floating_td_customizable_contraction_hierarchy.rs  floating_td_dijkstra.rs  mod.rs  td_astar.rs  td_dijkstra.rs  time_dependent_customizable_contraction_hierarchy.rs  time_dependent_sampling.rs  topocore.rs
engine/src/shortest_path/query/async/: bidirectional_dijkstra.rs  dijkstra.rs  mod.rs
engine/src/util/: in_range_option.rs
engine/tests/: integration_tests.rs  link_speed_estimates.rs
experiments/: customization_approx.rb  customization_scaling.rb  (+5 more)
server/: Cargo.toml  README.md
server/src/: main.rs
server/static/: index.html
(+37 files in other folders)
