[package]
name = "catchup"
version = "0.1.0"
edition = "2018"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_road_router = { path = "../engine" }
time = "^0.1.40"
rand = "^0.8.4"
rayon = "^1.4.1"
csv = "^1.0.2"
