[package]
name = "cchpp"
version = "0.1.0"
edition = "2021"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.5.1"
rust_road_router = { path = "../engine" }
rand = "^0.8.4"
affinity = "^0.1.2"

[features]
default = ["perfect-customization"]
remove-inf = []
directed = ["remove-inf"]
perfect-customization = []
