[package]
name = "conversion"
version = "0.1.0"
edition = "2021"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_road_router = { path = "../engine" }
csv = "^1.1.6"
glob = "^0.3.0"
nav-types = "^0.5.1"
flate2 = "^1.0"
