[package]
name = "rust_road_router"
version = "0.1.0"
authors = ["Tim 'tim3z' Zeitz <dev.tim.zeitz@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["tdcch-approx", "tdcch-precustomization", "tdcch-postcustomization", "tdcch-triangle-sorting", "tdcch-query-astar"]
tdcch-disable-par = ["cch-disable-par"]
cch-disable-par = []
tdcch-query-detailed-timing = []
tdcch-stall-on-demand = []
tdcch-approx = []
tdcch-approx-imai-iri = []
tdcch-precustomization = []
tdcch-postcustomization = []
tdcch-triangle-sorting = []
tdcch-query-astar = []
chpot-visualize = []
chpot-print-node-order = []
chpot-only-topo = []
chpot-no-deg2 = []
chpot-no-deg3 = []
chpot-no-scc = []
chpot-cch = []
report-to-stderr = []
detailed-stats = []

[dependencies]
time = "^0.1.40"
nav-types = "^0.3.0"
csv = "^1.0.2"
glob = "^0.2.11"
rand = "^0.6.1"
serde_json = "^1.0.35"
rayon = "^1.0.3"
core_affinity = "^0.5.9"
scoped-tls = "^1.0.0"

[build-dependencies]
built = "^0.3.0"
