[package]
name = "rust_road_router"
version = "0.1.0"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]
edition = "2018"
build = "build.rs"

[features]
default = ["tdcch-approx", "tdcch-precustomization", "tdcch-postcustomization", "tdcch-triangle-sorting", "tdcch-query-astar", "tdcch-query-lazy"]
tdcch-disable-par = ["cch-disable-par"]
cch-disable-par = []
tdcch-query-detailed-timing = []
tdcch-stall-on-demand = []
tdcch-approx = []
tdcch-approx-imai-iri = []
tdcch-precustomization = []
tdcch-postcustomization = []
tdcch-triangle-sorting = []
tdcch-query-lazy = []
tdcch-query-corridor = []
tdcch-query-astar = ["tdcch-query-corridor"]
tdcch-profiles-with-holes = []
tdcch-profiles-iterative-reconstruction = ["tdcch-profiles-with-holes"]
chpot-print-node-order = []
chpot-only-topo = []
chpot-no-deg2 = []
chpot-no-deg3 = []
chpot-no-bcc = []
chpot-cch = []
chpot-alt = []
chpot-oracle = ['report-allow-override']
report-to-stderr = []
report-allow-override = []
detailed-stats = []

[dependencies]
time = "^0.1.40"
rand = "^0.8.4"
serde_json = "^1.0.64"
rayon = "^1.5.1"
core_affinity = "^0.5.9"
scoped-tls = "^1.0.0"

[build-dependencies]
built = { version = "^0.5.1", features = ["git2", "chrono"] }
