[package]
name = "bmw_routing_server"
version = "0.1.0"
authors = ["Tim \"S.D.Eagle\" Zeitz <dev.tim.zeitz@gmail.com>"]

[dependencies]
bmw_routing_engine = { path = "../engine" }
rocket = { git = "https://github.com/SDEagle/Rocket", branch = "backport_nightly_fix" }
rocket_codegen = { git = "https://github.com/SDEagle/Rocket", branch = "backport_nightly_fix" }
serde = "^1.0.5"
serde_derive = "^1.0.5"
serde_json = "^1.0.5"
# kdtree = "^0.5.1"
[dependencies.rocket_contrib]
git = "https://github.com/SDEagle/Rocket"
branch = "backport_nightly_fix"
default-features = false
features = ["json"]
