[package]
name = "bmw_routing_server"
version = "0.1.0"
authors = ["Tim \"S.D.Eagle\" Zeitz <dev.tim.zeitz@gmail.com>"]

[dependencies]
bmw_routing_engine = { path = "../engine" }
rocket = "^0.3.10"
rocket_codegen = "^0.3.10"
serde = "^1.0.5"
serde_derive = "^1.0.5"
serde_json = "^1.0.5"
fux_kdtree = "0.2.0"
[dependencies.rocket_contrib]
version = "^0.3.10"
default-features = false
features = ["json"]
