[package]
name = "server"
version = "0.1.0"
authors = ["Tim \"S.D.Eagle\" Zeitz <dev.tim.zeitz@gmail.com>"]
edition = "2018"

[dependencies]
conversion = { path = "../conversion" }
rust_road_router = { path = "../engine" }
rocket = "^0.4.0"
serde = { version = "^1.0.5", features = ["derive"] }
serde_json = "^1.0.5"
fux_kdtree = "^0.2.0"
crossbeam-utils = "^0.5.0"

[dependencies.rocket_contrib]
version = "^0.4.0"
default-features = false
features = ["json"]
